              + they always return false, as the documentation has always
                promised (in the past, they succeeded in the presence of
                leading whitespace);
              + instead of performing the conversion "as best it can", the
                documentation now states that the value stored in dest is
                undefined.
        Constant is_cpp_integer_v<T>, is_signed_cpp_integer_v<T>,
                is_unsigned_cpp_integer_v<T>:
            - New compile-time constant is_signed_cpp_integer_v<T>.
            - All three constants are now false when T == bool (previously,
              is_cpp_integer_v<bool> and is_unsigned_cpp_integer_v<bool> were
              both true).
        Concepts:
            - Many new concepts, accessible via #include <concepts/*.h>:
              + AnyInteger, ArbitraryPrecisionInteger,
                ArbitraryPrecisionIntegerVector, ArrayOf, AssignableTo,
                BidirectionalIteratorFor, CanConstruct, CharIterator,
                CoefficientDomain, ConcatenableSequence, ConstRefArrayOf,
                CppInteger, Domain, Field, ForwardIteratorFor,
                InherentlyTightEncodable, InputIteratorFor, IntegerComparable,
                IntegerCompatible, IntegerVector, IntegralDomain, Iterable,
                PacketClass, PacketIterator, RandomAccessIteratorFor,
                ReginaBitmask, ReginaInteger, Ring, RingLike,
                SelfSentinelInputIterator, SignedCppInteger, StandardCppInteger,
                StrictWeakOrder, Stringifiable, TerminatingCallback,
                UnsignedCppInteger, VoidCallback, Writeable.
            - Other new concepts for targeted use defined in other headers:
              + BanConstraint, LPConstraint, LPSubspace (defined in
                enumerate/treelp.h)
              + IsoSigEncoding (defined in triangulation/isosigencoding.h)
              + IsoSigType (defined in triangulation/isosigtype.h)
    PYTHON: