@@ -2429,15 +2429,15 @@ namespace detail {
  * \ingroup detail
  */
 template <SignedCppInteger IntType>
-inline std::make_unsigned_t<IntType> negateToUnsignedType(IntType x) {
+inline regina::make_unsigned_cpp_t<IntType> negateToUnsignedType(IntType x) {
     // C++20 mandates a two's complement representation.
     if (x == std::numeric_limits<IntType>::min()) {
         // Negating x would be a signed overflow, which the C++ standard
         // says is undefined behaviour.  However, casting x directly as the
         // unsigned type will do the right thing.
-        return static_cast<std::make_unsigned_t<IntType>>(x);
+        return static_cast<regina::make_unsigned_cpp_t<IntType>>(x);
     } else {
-        return static_cast<std::make_unsigned_t<IntType>>(-x);
+        return static_cast<regina::make_unsigned_cpp_t<IntType>>(-x);
     }
 }
 
@@ -2455,7 +2455,7 @@ inline std::make_unsigned_t<IntType> negateToUnsignedType(IntType x) {
  * \ingroup detail
  */
 template <SignedCppInteger IntType>
-inline std::make_unsigned_t<IntType> differenceAsUnsigned(
+inline regina::make_unsigned_cpp_t<IntType> differenceAsUnsigned(
         IntType x, IntType y) {
     // C++20 mandates a two's complement representation.
     // The C++ standard says both unsigned overflow and casting to unsigned
@@ -2463,8 +2463,8 @@ inline std::make_unsigned_t<IntType> differenceAsUnsigned(
     // signed overflow is undefined.
     // So: we can just do everything in the unsigned type.  All errors will be
     // modulo 2^bits, and we know that the answer is in the range [0, 2^bits).
-    return static_cast<std::make_unsigned_t<IntType>>(x) -
-        static_cast<std::make_unsigned_t<IntType>>(y);
+    return static_cast<regina::make_unsigned_cpp_t<IntType>>(x) -
+        static_cast<regina::make_unsigned_cpp_t<IntType>>(y);
 }
 
 } // namespace detail
